--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <meta property="og:url" content="https://あなたのユーザー名.github.io/リポジトリ名/" />
   <!-- <meta property="og:image" content="https://…/ogp.png" /> -->
 
-  <link rel="stylesheet" href="./style.css" />
+<link rel="stylesheet" href="./css/style.css?v=2">
+
 </head>
 <body>
   <header class="site-header">
@@ -101,3 +102,4 @@
   </footer>
 </body>
 </html>
+
