--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:url" content="https://あなたのユーザー名.github.io/リポジトリ名/" />
   <!-- <meta property="og:image" content="https://…/ogp.png" /> -->
 
-<link rel="stylesheet" href="./css/style.css?v=2">
+<link rel="stylesheet" href="./css/style.css?">
 
 </head>
 <body>
@@ -102,4 +102,5 @@
   </footer>
 </body>
 </html>
+
 
