--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:url" content="https://あなたのユーザー名.github.io/リポジトリ名/" />
   <!-- <meta property="og:image" content="https://…/ogp.png" /> -->
 
-<link rel="stylesheet" href="./css/style.css?">
+ <link rel="stylesheet" href="./style.css" />
 
 </head>
 <body>
@@ -102,5 +102,6 @@
   </footer>
 </body>
 </html>
+
 
 
