--- a/index.html
+++ b/index.html
@@ -3,20 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Bucket List｜あなたの名前</title>
   <meta name="description" content="人生でやりたいことをカテゴリ別に整理し、進捗を記録するバケットリスト。" />
-  <meta name="theme-color" content="#0ea5e9" />
-
-  <!-- OGP（SNSでシェアしたとき用。画像は後で差し替えOK） -->
-  <meta property="og:title" content="Bucket List" />
-  <meta property="og:description" content="カテゴリ別に進捗を管理する私のバケットリスト。" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://あなたのユーザー名.github.io/リポジトリ名/" />
-  <!-- <meta property="og:image" content="https://…/ogp.png" /> -->
-
-<link rel="stylesheet" href="style.css">
-
+  <link rel="stylesheet" href="./style.css?v=5" />
 </head>
 <body>
   <header class="site-header">
@@ -34,7 +23,6 @@
   </header>
 
   <main class="container">
-    <!-- 進捗サマリー（JSなし版：手動で数字を更新） -->
     <section class="card">
       <h2>進捗サマリー</h2>
       <ul class="meta">
@@ -44,7 +32,6 @@
       </ul>
     </section>
 
-    <!-- カテゴリごとのカード（必要に応じて項目を増やす） -->
     <section id="travel" class="card">
       <h2>🗺 旅行・冒険</h2>
       <ul class="checklist">
@@ -102,10 +89,3 @@
   </footer>
 </body>
 </html>
-
-
-
-
-
-
-
