--- a/progress.html
+++ b/progress.html
@@ -2,21 +2,50 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>実施状況 - My Bucket List</title>
   <link rel="stylesheet" href="./style.css?v=1" />
   <style>
-    .section{margin:20px 0}
-    .section h2{margin-bottom:8px}
-    .items li{margin:6px 0}
+    /* 軽いUI */
+    .toolbar{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin:8px 0 16px}
+    .btn{border:1px solid #222;background:#fff;border-radius:6px;padding:6px 10px;cursor:pointer}
+    .btn[aria-pressed="true"]{background:#111;color:#fff}
+    .section{margin:22px 0}
+    .section h2{margin:0 0 10px}
+    .pill{display:inline-block;padding:2px 8px;border:1px solid #94a3b8;border-radius:999px;font-size:12px;color:#334155}
+    .meta{color:#64748b;font-size:12px;margin-left:8px}
+    .items li{margin:8px 0}
+    .controls{display:inline-flex;gap:6px;margin-left:8px;vertical-align:middle}
+    .controls select{padding:3px 6px;border:1px solid #cbd5e1;border-radius:6px}
+    .muted{color:#666;font-size:12px}
+    nav a{color:#2563eb;text-decoration:none;font-weight:600}
+    nav a:hover{text-decoration:underline}
   </style>
 </head>
 <body>
   <div class="paper">
     <div class="sheet">
       <header class="sheet__header">
-        <h1>実施状況一覧</h1>
-        <p class="muted">※ index.html と同じ localStorage のデータを参照しています。</p>
+        <h1>実施状況</h1>
+        <p class="muted">※ このページは <code>index.html</code> と同じ <strong>localStorage</strong> のデータを参照します。</p>
         <nav><a href="index.html">← Bucket List に戻る</a></nav>
+
+        <!-- フィルタ & 表示切替 -->
+        <div class="toolbar">
+          <span class="muted">フィルタ:</span>
+          <button class="btn" data-filter="all" aria-pressed="true">すべて</button>
+          <button class="btn" data-filter="month">今月中</button>
+          <button class="btn" data-filter="year">今年中</button>
+          <button class="btn" data-filter="5year">5年以内</button>
+          <button class="btn" data-filter="10year">10年以内</button>
+          <button class="btn" data-filter="someday">未分類/いつか</button>
+
+          <span class="muted" style="margin-left:12px">表示:</span>
+          <button class="btn" id="mode-flat" aria-pressed="false">リスト</button>
+          <button class="btn" id="mode-grouped" aria-pressed="true">グループ</button>
+        </div>
+
+        <p class="muted" id="updated">（最終更新日: —）</p>
       </header>
 
       <div id="progress"></div>
@@ -24,60 +53,94 @@
   </div>
 
   <script>
-  const KEY="bucketlist_v4"; // index.html と同じキーを使用
+  // ====== 設定 ======
+  const KEY = "bucketlist_v4"; // index.html と合わせる
+  const TARGET_LABEL = {
+    month: "今月中",
+    year: "今年中",
+    "5year": "5年以内",
+    "10year": "10年以内",
+    someday: "未分類/いつか"
+  };
+  const statusClass = { done:"done red", progress:"blue", ongoing:"green", todo:"" };
 
-  const statusClass={done:"done red",progress:"blue",ongoing:"green",todo:""};
-
-  const data=JSON.parse(localStorage.getItem(KEY)||"{}");
-
-  function groupByTarget(){
-    const groups={month:[],year:[],five:[],ten:[],other:[]};
-    if(!data.categories) return groups;
-    data.categories.forEach(cat=>{
+  // ====== データ読み込み & id 付与 ======
+  let state = JSON.parse(localStorage.getItem(KEY) || "null") || {};
+  if (!state.categories) state.categories = [];
+  // 各アイテムに恒久的な id を付与（なければ付与）
+  (function ensureIds(){
+    let seq = Date.now();
+    state.categories.forEach(cat=>{
       cat.items.forEach(it=>{
-        switch(it.target){
-          case "month": groups.month.push(it); break;
-          case "year": groups.year.push(it); break;
-          case "5year": groups.five.push(it); break;
-          case "10year": groups.ten.push(it); break;
-          default: groups.other.push(it);
-        }
+        if(!it.id){ it.id = `it_${seq++}`; }
+        if(!it.target){ it.target = "someday"; } // 既存データは未分類に
+        if(!it.status){ it.status = "todo"; }
       });
     });
-    return groups;
+    saveSilent(); // id付与のみ保存（updatedAtは更新しない）
+  })();
+
+  function save(){
+    state.updatedAt = new Date().toISOString();
+    localStorage.setItem(KEY, JSON.stringify(state));
+    document.getElementById("updated").textContent =
+      `（最終更新日: ${new Date(state.updatedAt).toLocaleString()}）`;
+  }
+  function saveSilent(){
+    localStorage.setItem(KEY, JSON.stringify(state));
+    if(state.updatedAt){
+      document.getElementById("updated").textContent =
+        `（最終更新日: ${new Date(state.updatedAt).toLocaleString()}）`;
+    }
+  }
+  saveSilent();
+
+  // ====== ユーティリティ ======
+  const el=(tag,attrs={},...chs)=>{
+    const n=document.createElement(tag);
+    for(const[k,v] of Object.entries(attrs)){
+      if(k==="class") n.className=v;
+      else if(k.startsWith("on")) n.addEventListener(k.slice(2),v);
+      else n.setAttribute(k,v);
+    }
+    chs.forEach(c=>n.append(c instanceof Node?c:document.createTextNode(c)));
+    return n;
+  };
+
+  function walkItems(){
+    // { id, text, status, target, categoryTitle, categoryId }
+    const out=[];
+    state.categories.forEach(cat=>{
+      cat.items.forEach(it=>{
+        out.push({...it, categoryTitle:cat.title, categoryId:cat.id});
+      });
+    });
+    return out;
   }
 
+  // ====== 画面状態 ======
+  let currentFilter = "all";   // all | month | year | 5year | 10year | someday
+  let viewMode = "grouped";    // grouped | flat
+
+  // ====== 描画 ======
   function render(){
-    const box=document.getElementById("progress");
-    box.innerHTML="";
-    const groups=groupByTarget();
-    const sections=[
-      ["今月中に実施",groups.month],
-      ["今年中に実施",groups.year],
-      ["5年以内に実施",groups.five],
-      ["10年以内に実施",groups.ten],
-      ["未分類/いつか",groups.other]
-    ];
-    sections.forEach(([title,list])=>{
-      const div=document.createElement("div");
-      div.className="section";
-      div.innerHTML=`<h2>${title}</h2>`;
-      const ol=document.createElement("ol");
-      ol.className="items";
-      list.forEach((it,i)=>{
-        const li=document.createElement("li");
-        li.textContent=`${it.text}`;
-        if(it.status){
-          li.className=statusClass[it.status]||"";
-        }
-        ol.appendChild(li);
-      });
-      if(list.length===0) ol.innerHTML="<li class='muted'>なし</li>";
-      div.appendChild(ol);
-      box.appendChild(div);
+    const box = document.getElementById("progress");
+    box.innerHTML = "";
+
+    const allItems = walkItems();
+
+    const filtered = allItems.filter(it=>{
+      if(currentFilter==="all") return true;
+      return (it.target || "someday") === currentFilter;
     });
+
+    if(viewMode==="flat"){
+      renderFlat(box, filtered);
+    }else{
+      renderGrouped(box, filtered);
+    }
   }
-  render();
-  </script>
-</body>
-</html>
+
+  function renderFlat(root, items){
+    const ol = el("ol", {class:"items"});
+    // 並びは target → statu
